implemented zero copy memory in GPU SIMD